# wvnc

./: CMakeLists.txt  LICENSE  bitmap.h  buffer.c  damage.c  damage.h  main.c  meson.build  wvnc.h
protocols/: wlr-screencopy-unstable-v1.xml
